Commit 2 Ejemplos Tarea

--- a/src/main/resources/static/Ejemplo5.html
+++ b/src/main/resources/static/Ejemplo5.html
@@ -10,17 +10,15 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1>Prueba Heading. Hola</h1>
-        <div>Proyecto Inicial App Web y Patrones</div>
-        <div>
+        <h1>HREF</h1>
+        <a href="index.html">Inicio</a>
+        <a href="Ejemplo6.html">Siguiente</a>
+        <a href="Ejemplo4.html">Anterior</a>
+        <div style="color:green">
+            <!--Styles-->
             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit inceptos sodales aliquam auctor erat, purus arcu sociosqu porta tellus venenatis senectus faucibus maecenas parturient felis. Commodo netus feugiat aliquet fusce rhoncus enim laoreet ridiculus potenti senectus, rutrum auctor elementum accumsan nunc tellus eget gravida cras curabitur parturient, leo eu massa habitant purus justo litora luctus pellentesque. Sollicitudin neque fusce cubilia fringilla sapien mi sociis lobortis quis, eleifend posuere habitasse sed habitant sem rhoncus mattis.</p>
             <p>Mattis cras fames sapien tincidunt quis tempor natoque arcu, habitant aenean aliquam ac imperdiet maecenas ligula, ridiculus euismod ad sollicitudin curabitur donec at. In nisi magnis commodo at aliquam magna ornare taciti tempor nec porttitor natoque, euismod vivamus lobortis aenean massa imperdiet nunc posuere nulla ante sociis. Consequat suspendisse tristique nascetur felis class sed duis quam himenaeos, facilisis proin velit in sem nulla convallis purus blandit fermentum, nec netus euismod rutrum quisque lacus varius donec.</p>
-            <p>Morbi elementum volutpat justo eros purus faucibus iaculis mattis taciti, erat varius interdum suspendisse libero sollicitudin vestibulum consequat, metus nibh mi sociosqu dictumst mollis ante aptent. Scelerisque per tempor montes enim sodales a condimentum egestas, ornare ligula ad ultricies sem neque nullam magnis facilisis, feugiat porttitor congue volutpat arcu suscipit mi. Nam penatibus est in gravida felis cubilia curabitur, cum vel bibendum praesent blandit aliquam accumsan lacinia, mus venenatis non augue laoreet senectus. Etiam gravida sagittis sociis mollis cursus urna aenean condimentum tempor cras, id massa netus curabitur fusce justo neque sed vulputate donec potenti, fames vivamus libero et molestie ad at dapibus nibh.</p>
-       
-            <br><!-- comment -->
-            
-            <p>Ultima Linea</p>
-            <a href="Ejemplo9.html">Form</a>
+            <p>Morbi elementum volutpat justo eros purus faucibus iaculis mattis taciti, erat varius interdum suspendisse libero sollicitudin vestibulum consequat, metus nibh mi sociosqu dictumst mollis ante aptent. Scelerisque per tempor montes enim sodales a condimentum egestas, ornare ligula ad ultricies sem neque nullam magnis facilisis, feugiat porttitor congue volutpat arcu suscipit mi. Nam penatibus est in gravida felis cubilia curabitur, cum vel bibendum praesent blandit aliquam accumsan lacinia, mus venenatis non augue laoreet senectus. Etiam gravida sagittis sociis mollis cursus urna aenean condimentum tempor cras, id massa netus curabitur fusce justo neque sed vulputate donec potenti, fames vivamus libero et molestie ad at dapibus nibh.</p>     
         </div>
     </body>
 </html>
