--- a/src/main/resources/static/Ejemplo6.html
+++ b/src/main/resources/static/Ejemplo6.html
@@ -14,9 +14,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <a href="Ejemplo6.html">Siguiente</a>
         <a href="Ejemplo4.html">Anterior</a>
         <ul>
-            <li>Item1</li>
-            <li>Item2</li>
-            <li>Item3</li>
+            <li class="elementoImportante">Item1</li>
+            <li class="elementoImportante">Item2</li>
+            <li class="elementoImportante">Item3</li>
         </ul>
         <ol>
             <li>Item1</li>
@@ -25,3 +25,4 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         </ol>
     </body>
 </html>
+<link href="CSS/estilos.css" rel="stylesheet" type="text/css"/>
