--- a/src/main/resources/static/Ejemplo9.html
+++ b/src/main/resources/static/Ejemplo9.html
@@ -21,7 +21,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             </div>
             <div>
                 <label>Correo</label>
-                <input placeholder="correo@correo.com" type="email" name="correo" value="" size="60"/>
+                <input placeholder="correo@correo.com" type="email" name="correo" id="correoElectronico" value="" size="60"/>
             </div>
             <input type="Submit" value="Register"/>
         </form>
