--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,18 +10,22 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <meta name="keywords" content="html5,css,web,fidelitas"/>
         <meta name="description" content="Página LEC 2"/>
         <link href="CSS/estilos.css" rel="stylesheet" type="text/css"/>
+        <link href="CSS/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <!--HEADER-->
-        <header id="encabezado">
-            <h1>Tienda en Linea</h1>
-            <br/>
+        <header class="header">
+            <nav class="nav">
+                <a href="index.html" class="logo nav-link">TechShop</a>
+                <ul class="nav-menu">
+                    <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="Ejemplo9.html">&LeftTriangleBar;</a> </li>
+                    <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="Ejemplo2.html">&RightTriangleBar;</a> </li>
+                    <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="Audios.html">Audios</a> </li>
+                    <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="Videos.html">Videos</a> </li>
+                    <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="iframes.html">IFrames</a> </li>
+                    <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="Forms.html">Formularios</a> </li>
+            </nav>
         </header>
-        <nav id="menu">
-            <a href="Ejemplo9.html">Atras</a>
-            <a href="index.html">Home</a>
-            <a href="Ejemplo2.html">Adelante</a>
-        </nav>
        
         <aside id="barraLateral">
             <h2>Productos mas vendidos</h2>
